Set default header height to avoid layout shift

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -6,6 +6,10 @@
 @forward 'homepage';
 @forward '../components/header/header.scss';
 
+:root {
+  --header-height: 75px; /* Default height, setting the value aims to minimize layout shift on initial load. It is overwritten with the actual measured value in header-client.tsx */
+}
+
 body {
   box-sizing: border-box;
 }
